# Teste-de-software

Atv_02 Teste estrutural/: algoritmo_avaliacao_notas.c  algoritmo_combinatoria.c  algoritmo_divisores.c  algoritmo_mdc_euclides.c
Teste de Integração/tabajara_biblioteca/: README.md  pyproject.toml
Teste de Integração/tabajara_biblioteca/app/: models.py  repositories.py
Teste de Integração/tabajara_biblioteca/app/services/: loan_service.py
Teste de Integração/tabajara_biblioteca/tests/contract/: test_contracts.py
Teste de Integração/tabajara_biblioteca/tests/integration/: test_integration_loan_flow.py
Teste de Integração/tabajara_biblioteca/tests/unit/: test_loan_service_unit.py
Trabalho-Gabrieis/: README.md  pyproject.toml  replit.md  run.py  wsgi.py
Trabalho-Gabrieis/sgbu_equipe3_emprestimos/: README.md  requirements.txt
Trabalho-Gabrieis/sgbu_equipe3_emprestimos/app/: models.py  seed.py
Trabalho-Gabrieis/sgbu_equipe3_emprestimos/app/templates/: base.html  style.css
Trabalho-Gabrieis/sgbu_equipe3_emprestimos/instance/: sgbu.db
Trabalho-Gabrieis/sgbu_equipe3_emprestimos/tests/: conftest.py  test_contracts.py
sgbu_equipe3_emprestimos/app/: app.py
sgbu_equipe3_emprestimos/app/templates/: base.html  index.html  loans.html
sgbu_equipe3_emprestimos/tests/: test_unit_loans.py
