[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "gunicorn>=23.0.0",
    "pydantic==2.8.2",
    "pytest==8.2.1",
    "pytest-flask==1.3.0",
    "python-dateutil==2.9.0.post0",
]
